--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,14 @@
     "author": "Amir Zarie",
     "action": {
         "default_popup": "index.html"
-    }
+    },
+    "content_scripts": [
+        {
+            "matches": ["https://mail.google.com/*"],
+            "js": ["gmail_script.js"]
+        }
+    ],
+    "host_permissions": [
+        "https://mail.google.com/*"
+    ]
 }
